Ajout de la fonctionnalité de demander pour être marchant + moyen d'accepter la demande si on est administrateur
